<resources>
    <string name="app_name">6人游</string>
    <string name="reload">重新加载</string>
    <string name="not_wifi_tip">请检查您的手机是否联网，点击按钮重新加载</string>
    <string name="app_back">返回</string>
    <string name="app_ok">确定</string>
    <string name="app_cancel">取消</string>
    <string name="app_continue">继续</string>
    <string name="app_tip">提示</string>
    <string name="app_send">发送</string>
    <string name="app_set">设置</string>
    <string name="app_save">保存</string>
    <string name="app_delete">删除</string>
    <string name="app_nextstep">下一步</string>
    <string name="app_prevstep">上一步</string>
    <string name="app_finish">完成</string>
    <string name="app_find">查找</string>
    <string name="app_edit">编辑</string>

    <!-- applet -->
    <string name="applet_secimg_title">填写验证码</string>
    <string name="applet_secimg_change">换一张图片</string>
    <string name="applet_seccode_tip">验证码不能为空</string>
    <string name="applet_seccode_fail_tip">验证码错误，请重新输入</string>

    <!-- verify -->
    <string name="verify_password_null_tip">密码不能为空，请输入密码</string>

    <!-- format -->
    <string name="fmt_date">M月d日</string>
    <string name="fmt_longdate">yyyy年M月d日</string>
    <string name="fmt_datetime" formatted="false">M月d日 %skk:mm</string>
    <string name="fmt_patime">kk:mm</string>
    <string name="fmt_longtime" formatted="false">yyyy年M月d日 %skk:mm</string>
    <string name="fmt_in60min" formatted="false">%d分钟前</string>
    <string name="fmt_justnow">1分钟内</string>
    <string name="fmt_dawn">凌晨</string>
    <string name="fmt_morning">早上</string>
    <string name="fmt_noon">中午</string>
    <string name="fmt_afternoon">下午</string>
    <string name="fmt_evening">晚上</string>
    <string name="fmt_pre_yesterday">昨天</string>
    <string name="fmt_iap_err" formatted="false">网络连接不可用，请稍候重试</string>
    
    <string name="hello">Hello World, SDKSampleActivity!</string>
	<string name="app_share">分享</string>
    
    <string name="enter">这是SDK_Sample的入口界面</string>
    <string name="reg">将该app注册到微信</string>
    <string name="goto_send">跳转到发消息界面</string>
    <string name="launch_wx">启动微信</string>
    <string name="check_timeline_supported">检查是否支持发送到朋友圈</string>
    
    <string name="send_to_wx_title">发送到微信</string>
	<string name="get_from_wx_title">从微信接收</string>
	<string name="show_from_wx_title">显示微信请求的消息</string>

	<string name="errcode_success">发送成功</string>
	<string name="errcode_cancel">发送取消</string>
	<string name="errcode_deny">发送被拒绝</string>
	<string name="errcode_unknown">发送返回</string>
	
    <!-- WXMediaMessage -->
	<string name="send">发送到微信</string>
	<string name="receive">从微信接收</string>
	
	<string name="is_timeline">是否分享到朋友圈</string>
	<string name="send_text">发送文本</string>
	<string name="send_text_default">6人游内容分享</string>
	
	<string name="send_img">发送图片</string>
	<string-array name="send_img_item">
        <item>发送图片的二进制数据</item>
        <item>发送图片的本地路径</item>
        <item>发送图片的URL</item>
    </string-array>
	<string name="send_img_file_not_exist">文件不存在</string>
	
	<string name="send_pic">发送照片</string>
	
	<string name="send_music">发送音乐</string>
	<string-array name="send_music_item">
	    <item>发送音乐url</item>
	    <item>发送低带宽音乐url</item>
	</string-array>

	<string name="send_video">发送视频</string>
	<string-array name="send_video_item">
	    <item>发送视频url</item>
	    <item>发送低带宽视频url</item>
	</string-array>
	
	<string name="send_webpage">发送网页</string>
	<string-array name="send_webpage_item">
	    <item>发送网页url</item>
	</string-array>

	<string name="send_appdata">发送app消息</string>
	<string-array name="send_appdata_item">
	    <item>发送app文件本地路径</item>
	    <item>发送app二进制数据</item>
	    <item>发送无附件的app</item>
	</string-array>
	
	<string name="send_emoji">发送表情消息</string>
	<string-array name="send_emoji_item">
	    <item>发送表情本地路径</item>
	    <item>发送表情二进制数据</item>
	</string-array>
	
	<string-array name="send_emoji_item_format">
	    <item>发送GIF图片</item>
	    <item>发送非GIF图片</item>
	</string-array>
	
    <string name="share_text_to_weixin">回应文本到微信</string>
    <string name="share_text_default">这段文字回应自微信SDK示例程序</string>
    <string name="share_url_to_weixin">回应URL到微信</string>
    <string name="share_pic_to_weixin">回应图片到微信</string>
    <string name="share_music_to_weixin">回应音乐到微信</string>
    <string name="share_video_to_weixin">回应视频到微信</string>
    <string name="share_appdata_to_weixin">回应app消息到微信</string>
    
    <string name="register_as_weixin_app_sender">注册微信事件发送器</string>
    <string name="get_token_from_weixin">获取微信访问Token</string>
    <string name="unregister_from_weixin">从微信反注册</string>
    
    <string name="show_from_wx_tip">这个界面用于显示微信向第三方app请求显示的信息</string>
    <string name="title_activity_wxentry">WXEntryActivity</string>

    <string name="travelcard_title">6人游智能行李牌</string>
    <string name="bind_travelcard_title">绑定智能行李牌</string>
    <string name="my_travelcard_title">我的智能行李牌</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="title_activity_show">ShowActivity</string>
    <string name="title_activity_show_travel_card">ShowTravelCardActivity</string>
    <string name="bind_travelcard_text">点击绑定</string>
    <string name="bind_travelcard_text_ok">确定绑定</string>
    <string name="re_scan_travelcard_text">重新扫描</string>
    <string name="title_activity_base">BaseActivity</string>


    <string name="bind_success_text">您的行李牌与手机绑定成功！</string>
    <string name="settings">设置</string>
    <string name="no_equipment">还没有智能行李牌?</string>
    <string name="online_buy">在线购买</string>
    <string name="scan_success_text">6人游智能行李牌上的灯是否在闪烁?</string>

    <string name="notify_title">6人游提示您</string>
    <string name="notify_bind_success">您的行李牌绑定成功</string>
    <string name="notify_current_distance">您的行李牌当前距离</string>
    <string name="notify_disconnect_travelcard">您的行李超出距离，请检查是否遗忘</string>
    <string name="notify_connected_travelcard">您的行李已经在您附近，请查看</string>
    <string name="notify_bluetooth_closed">您的手机蓝牙没有开启</string>
    <string name="title_activity_show_position">ShowPositionActivity</string>
    <string name="tip_no_lang_lat">GPS定位失败</string>

    <string name="hello_world">Hello world!</string>
</resources>
